# eventmeta

./: .gitignore  BUILD  LICENSE  README.md  WORKSPACE  accessor.go  context.go  event.go  go.mod  go.sum  group.go  incomplete.go  incomplete_test.go  meta.go  meta_test.go
example/: BUILD.bazel  main.go
v0/: BUILD.bazel  groups.go  mail_sent.go
