load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "groups.go",
        "mail_sent.go",
    ],
    importpath = "github.com/seibert-media/eventmeta/v0",
    visibility = ["//visibility:public"],
    deps = ["//:go_default_library"],
)
